@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'Client place an order to purchase the property.

title Domain Model




class Person{
    emailAddress
    passport
    tin
    phoneNumber
    name
}

class Property <<Interface>>{
    photos
    areaProperty
    distanceCityCenter
}

class House {
    numberBedrooms
    numberBathrooms
    numberParking
    availableEquipment
    basement
    loft
    sunExposure
}

class Apartment{
    numberBedrooms
    numberBathrooms
    numberParking
    availableEquipment
}
class Land{}

class Advertisement {
    commissionValue
    commissionType
    date
}

class PropertyType{
    designation
}

class Location <<Interface>> {
    street
    zipCode
    stateUS
    city
    district
}

class Request <<Interface>> {
    date
}

class RequestSale {
    salePrice
}

class RequestLease {
    rentalPrice
    durationOfContract
}

class BusinessType{
    designation
}

class Offer{
    offer
}

class Employee{
}

Person <|-- Employee
Person "1" -- "*" Offer: makes >
Person "*" -- "*" Advertisement: searches >

Employee "1" -- "*" Request: publishes >


House .up.|> Property
Land .up.|> Property
Apartment .up.|> Property

Location  <|.. Property
Location <|.up. Person

Advertisement "1" -left- "*"Offer: receives >


PropertyType "1" -- "*" Property: contains <

Request "*" -right- "1" BusinessType: contains >
Request "1" -- "1" Property
Request "1" -- "1" Advertisement:contains <
Request <|.down. RequestSale
Request <|.down. RequestLease

@enduml